--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -95,18 +95,26 @@
                 android:textSize="@dimen/font_size_textview"
                 android:textColor="@color/textViews"/>
 
-            <EditText
-                android:id="@+id/etDate_of_birth"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/birthDateLayout"
                 android:layout_width="match_parent"
-                android:inputType="date"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:hint="@string/yearOfBirth_hint"
-                android:textColorHint="@color/editTexts"
                 android:theme="@style/Theme.App.Base"
-                android:focusable="false"
-                android:textSize="@dimen/font_size_edittext" />
+                android:textColorHint="@color/editTexts">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/etDate_of_birth"
+                    android:layout_width="match_parent"
+                    android:inputType="date"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/yearOfBirth_hint"
+                    android:textColorHint="@color/editTexts"
+                    android:focusable="false"
+                    android:textSize="@dimen/font_size_edittext" />
+
+            </android.support.design.widget.TextInputLayout>
 
             <TextView
                 android:id="@+id/email_label_register"
