--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,16 +4,16 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_search"
             android:icon="@drawable/ic_search_black_24dp"
-            android:title="Find" />
+            android:title="Search" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_create"
             android:icon="@drawable/ic_create_black_24dp"
             android:title="Create" />
 
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_manage"
             android:title="Settings" />
     </group>
