--- a/app/src/main/res/layout/fragment_archive.xml
+++ b/app/src/main/res/layout/fragment_archive.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.emile1.findaparty.Activity.fragment.ArchiveFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/archive_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
+    </android.support.v7.widget.RecyclerView>
     <ProgressBar
         android:id="@+id/progressBar2"
         android:layout_gravity="center_horizontal"
